--- a/app/src/main/res/layout/activity_register1.xml
+++ b/app/src/main/res/layout/activity_register1.xml
@@ -6,7 +6,8 @@
     android:id="@+id/register1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity1">
+    tools:context=".RegisterActivity1"
+    android:backgroundTint="@color/white">
 
     <TextView
         android:id="@+id/textView"
