--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:backgroundTint="@color/white">
 
 
     <ImageButton
@@ -35,15 +36,18 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/userImage"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
         android:layout_marginStart="124dp"
         android:layout_marginTop="168dp"
         android:adjustViewBounds="true"
-        android:background="@null"
+        android:background="@drawable/circle_bg"
+        android:clipToOutline="true"
         android:contentDescription="@string/settingImage"
+        android:outlineProvider="background"
         android:scaleType="centerCrop"
+        android:src="@drawable/anony_user"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/anony_user" />
@@ -54,6 +58,7 @@
         android:layout_height="41dp"
         android:layout_marginStart="48dp"
         android:layout_marginTop="380dp"
+        android:paddingEnd="40dp"
         android:ems="10"
         android:inputType="text"
         android:hint="@string/settingName"
@@ -63,7 +68,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextText"
+        android:id="@+id/editMessage"
         android:layout_width="308dp"
         android:layout_height="41dp"
         android:layout_marginStart="48dp"
@@ -101,13 +106,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-
             android:background="@drawable/rounded_btn"
             android:fontFamily="@font/nexon_gothic_bold"
-            android:text="Left"
+            android:text="@string/publicDeactive"
             android:textColor="#3b3b3b"
             android:textSize="20sp" />
 
+        <!-- 중간 텀 -->
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -118,13 +123,56 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-
             android:background="@drawable/rounded_btn_gray_true"
             android:fontFamily="@font/nexon_gothic_bold"
-            android:text="Right"
+            android:text="@string/publicActive"
             android:textColor="#3b3b3b"
             android:textSize="20sp" />
     </LinearLayout>
 
+    <ImageButton
+        android:id="@+id/name_clear"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="336dp"
+        android:layout_marginTop="388dp"
+        android:adjustViewBounds="true"
+        android:background="@null"
+        android:scaleType="centerCrop"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/clear_text"
+        android:contentDescription="@string/editTextClear"
+        android:visibility="gone"/>
+
+    <ImageButton
+        android:id="@+id/msg_clear"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="336dp"
+        android:layout_marginTop="468dp"
+        android:adjustViewBounds="true"
+        android:background="@null"
+        android:contentDescription="@string/editTextClear"
+        android:scaleType="centerCrop"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/clear_text"
+        android:visibility="gone"/>
+
+    <Button
+        android:id="@+id/registerBtn"
+        android:layout_width="308dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="648dp"
+        android:layout_weight="1"
+        android:text="회원가입 하기"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/rounded_btn_gray_true"
+        android:fontFamily="@font/nexon_gothic_bold"
+        android:textColor="#D9D9D9"
+        android:textSize="20sp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
