--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="deActivate">#AFAFAF</color>
+    <color name="black">#FF3B3B3B</color>
+    <color name="white">#FFFAFAF8</color>
+    <color name="deActivate">#FFAFAFAF</color>
+    <color name="activateBlue">#FF007AFF</color>
+    <color name="brightgray">#FFF0F0F0</color>
+    <color name="gray">#FFD9D9D9</color>
 </resources>
+
